kubernetes/apps/kube-system/cilium/policies/allow-rackula-internal.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliumnetworkpolicy_v2.json
# Rackula internal: the nginx frontend reaches its API on 3001, both carry the
# same instance label within the default namespace
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-rackula-internal
spec:
  enableDefaultDeny:
    egress: false
    ingress: false
  endpointSelector:
    matchLabels:
      io.kubernetes.pod.namespace: default
      app.kubernetes.io/instance: rackula
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: default
            app.kubernetes.io/instance: rackula
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: default
            app.kubernetes.io/instance: rackula
